# bnl2

./: .coveragerc  .gitignore  .readthedocs.yaml  .readthedocs.yml  README.md  build_docs.sh  docs_build_manual.md  environment.yml  pyproject.toml
.windsurf/rules/: preference-guide.md
docs/: Makefile  conf.py  development.rst  environment.yml  examples.rst  index.rst  installation.rst  quickstart.rst  requirements.txt  tutorial.rst
docs/_static/: custom.css
docs/api/: bnl.rst  core.rst  data.rst  index.rst  viz.rst
docs/examples/: index.rst
docs/pages/: examples.rst  modules.rst  quickstart.rst
examples/: README.txt  index.rst  plot_quickstart.py
notebooks/: data_loading_demo.ipynb  development.ipynb
src/bnl/: __init__.py  core.py  ops.py  viz.py
src/bnl/core/: segment.py
src/bnl/data/: __init__.py  base.py  salami.py
src/bnl/metrics/: __init__.py  flat.py  hier.py  utils.py
tests/: test_core.py  test_data.py  test_viz.py
tests/core/: test_segment.py
