[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bnl"
version = "0.1.0"
description = "Boundary and Labeling Research Project"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

[project.optional-dependencies]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=0.5.0",
    "sphinx-gallery>=0.10",
    "numpydoc>=1.0",
    "matplotlib>=3.0",
    "sphinx-copybutton>=0.3.0",
    "sphinx-design",
    "myst-parser"
]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.910",
    "pylint>=2.12.0",
]

[project.urls]
Source = "https://github.com/tomxi/bnl"
Issues = "https://github.com/tomxi/bnl/issues"
