[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bnl"
version = "0.1.0"
description = "Boundary and Labeling Research Project"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.20",  
    "mir_eval>=0.7", 
    "matplotlib>=3.3",
    "librosa>=0.8.0",
    "pyarrow>=14.0",
    "jams>=0.3.4",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=0.5.0",
    "numpydoc>=1.0",
    "sphinx-copybutton>=0.3.0",
    "myst-parser>=0.18.0",
    "sphinx-autobuild>=2021.3.14"
]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.910",
    "pylint>=2.12.0",
    "black>=23.0.0",
]

[project.urls]
Source = "https://github.com/tomxi/bnl2"
Issues = "https://github.com/tomxi/bnl2/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError"
]
fail_under = 80
